tests/ui/consts/const-size_of-cycle.stderr
error[E0391]: cycle detected when const-evaluating + checking `Foo::bytes::{constant#0}`
  --> $DIR/const-size_of-cycle.rs:4:17
   |
LL |     bytes: [u8; std::mem::size_of::<Foo>()]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which requires computing layout of `Foo`...
   = note: ...which requires computing layout of `[u8; std::mem::size_of::<Foo>()]`...
   = note: ...which requires normalizing `[u8; std::mem::size_of::<Foo>()]`...
note: ...which requires evaluating type-level constant...
  --> $DIR/const-size_of-cycle.rs:4:17
   |
LL |     bytes: [u8; std::mem::size_of::<Foo>()]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires const-evaluating + checking `Foo::bytes::{constant#0}`...
  --> $DIR/const-size_of-cycle.rs:4:17
   |
LL |     bytes: [u8; std::mem::size_of::<Foo>()]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires const-evaluating + checking `Foo::bytes::{constant#0}`, completing the cycle
note: cycle used when evaluating type-level constant
  --> $DIR/const-size_of-cycle.rs:4:17
   |
LL |     bytes: [u8; std::mem::size_of::<Foo>()]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
